--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ justify-content: center; align-items: center; flex-direction: column;" id="bck">
     <a href="https://github.com/wishrohitv" target="_blank">
         <img src="github.png" alt="github" height="70px">
     </a>
-    <a href="https://intagram.com/wishrohitv" target="_blank">
+    <a href="https://instagram.com/wishrohitv" target="_blank">
         <img src="instagram.png" alt="instagram" height="70px">
     </a>
     </div>
