--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ justify-content: center; align-items: center; flex-direction: column;" id="bck">
                 Thursday
             </th>
             <th>
+                Friday
+            </th>
+            <th>
                 Suturday
             </th>
         </tr>
@@ -98,6 +101,9 @@ justify-content: center; align-items: center; flex-direction: column;" id="bck">
             </td>
             <td>
                 No Please
+            </td>
+            <td>
+                No 😇
             </td>
             <td>
                 No Please
