--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wishrohitv-portfolio</title>
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap" rel="stylesheet">
@@ -13,59 +15,19 @@
 <body style="background-color: rgb(169, 229, 135); display: flex;
 justify-content: center; align-items: center; flex-direction: column;" id="bck">
     <div style="position: relative;">
-    <h1 id="greetings" style="font-family: 'Rubik Glitch', system-ui; word-spacing: 8px ;padding: auto; width: auto;">Hello, This is my first Website</h1>
+    <h1 id="greetings" style="font-family: 'Rubik Glitch', system-ui; word-spacing: 8px ;padding: auto; width: auto; font-size: 60px;">Hello, This is my first Website</h1>
 
-    <button onclick="called()" id="greetme" style="border-radius: 8px; height: 60px; background-color: rgb(43, 226, 134); font-family: 'Rubik Glitch', system-ui;">Greet YourSelf😀</button>
+    <button onclick="called()" id="greetme" style="border-radius: 8px; height: 60px; background-color: rgb(43, 226, 134); font-family: 'Rubik Glitch', system-ui; font-size: 22px;">Greet YourSelf😀</button>
 
     <button onclick="changColor()" id="changColor" style="border-radius: 8px; height: 60px; background-color: rgb(186, 129, 239); font-family: 'Rubik Glitch', system-ui;">Change Color🤗</button>
 
     <button onclick="changBackgroundColor()" id="changbackColor" style="border-radius: 8px; height: 60px; background-color: rgb(239, 135, 143); font-family: 'Rubik Glitch', system-ui;">Change Background Color🙄</button>
-    <script>
-        function called() {
-            var time = new Date()
-            let timestamp = time.getHours()
-            console.log(timestamp)
 
-            var greting_user;
-            if (timestamp >= 0 && timestamp < 12){
-                greting_user = "Good Morning🤩";
-            }
-            else if (timestamp >=12 && timestamp < 19){
-                greting_user = "Good AfterNoon🥰"
-            }
-            else if (timestamp >=19 && timestamp < 24){
-                greting_user = "Good Evening😎"
-            }
-            else if (timestamp >=24){
-                greting_user = "Good Night😴"
-            }
-
-            document.getElementById("greetings").innerText = "Hello, "+greting_user
-        }
-        function changColor(){
-            let list = ["red", "green", "yellow", "purple", "skyblue", "pink"]
-            let m = Math.random() * 5
-            console.log(parseInt(m))
-            document.getElementById("greetings").style.color = list[parseInt(m)]
-            document.getElementById("table").style.borderColor = list[parseInt(m)]
-            document.getElementById("greetme").style.color = list[parseInt(m)]
-            document.getElementById("changColor").style.color = list[parseInt(m)]
-            document.getElementById("changbackColor").style.color = list[parseInt(m)]
-            document.getElementById("about").style.color = list[parseInt(m)]
-        }
-        
-        function changBackgroundColor(){
-            let list = ["red", "green", "yellow", "purple", "skyblue", "pink"]
-            let m = Math.random() * 5
-            console.log(parseInt(m))
-            document.getElementById("bck").style.backgroundColor = list[parseInt(m)]
-
-        }
-    </script>
 
     <hr>
+    <br>
     <h2 style="font-family: 'Rubik Glitch', system-ui;">My Daily Routine</h2>
-    <table border="2" align="left" id="table" style="border-radius: 8px; height: 70px;">
+    <table border="2" align="left" id="table" style="border-radius: 8px; height: 75px;">
         <tr align="center">
             <th>
                 Sunday
@@ -115,7 +77,7 @@ justify-content: center; align-items: center; flex-direction: column;" id="bck">
 
     </table>
     <br>
-    <hr>
+    <br>
     <br>
     <br>
     <h1 style="font-family: 'Rubik Glitch', system-ui;">about me</h1>
@@ -124,12 +86,16 @@ justify-content: center; align-items: center; flex-direction: column;" id="bck">
     <br>
 
     <div style="flex-direction: row; display: flex; justify-content: center; align-items: center; padding: 10px;">
-    <a href="https://github.com/wishrohitv" target="_blank">
-        <img src="github.png" alt="github" height="70px">
-    </a>
-    <a href="https://instagram.com/wishrohitv" target="_blank">
-        <img src="instagram.png" alt="instagram" height="70px">
-    </a>
+        <a href="https://github.com/wishrohitv" target="_blank">
+            <img src="icons/github.png" alt="github" height="70px" style="margin-right: 40px;">
+        </a>
+        <a href="https://instagram.com/wishrohitv" target="_blank">
+            <img src="icons/instagram.png" alt="instagram" height="70px" style="margin-left: 40px; margin-right: 40px;">
+        </a>
+    </div>
+
+    <div class="visiter" style="opacity: 0;"><script type="text/javascript" src="https://www.counters-free.net/count/dlk6"></script><br>
+        <a href='https://www.acadoo.de/'>Ghostwriting</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=481a5ee27072d9b40db69ab326f1715558d42c81'></script>
     </div>
 
     <h1>Thanks for Visiting....</h1>
