--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ justify-content: center; align-items: center; flex-direction: column;" id="bck">
     <br>
     <br>
     <h1 style="font-family: 'Rubik Glitch', system-ui;">about me</h1>
-    <p style="font-family: 'Rubik Glitch', system-ui; font-size: large;"><h1 id="about">>I'm Disaster in managing things😤</h1</p>
+    <p style="font-family: 'Rubik Glitch', system-ui; font-size: large;"><h1 id="about">>I'm Disaster in managing things😤</h1></p>
     <br>
     <br>
 
